--- a/src/style/common.less
+++ b/src/style/common.less
@@ -19,10 +19,6 @@ li {
     display: none;
 }
 
-.viewBox {
-    width: 100%;
-}
-
 .row {
     display: flex;
     flex-direction: row;
@@ -75,13 +71,13 @@ li {
   overflow: hidden;
   padding-bottom: 80px;
   position: absolute;
-  padding-top: 50px;
+  // padding-top: 50px;
 }
 .myHeader{
-  position: fixed;
+  position: relative;
   width: 100%;
   height: 50px;
-  background-color: #e51c23;
+  background-color: #e51c23 !important;
   top: 0;
   color: aliceblue;
   z-index: 120;
